--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,1 +1,23 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png><link rel=icon type=image/png sizes=32x32 href=/favicon-32x32.png><link rel=icon type=image/png sizes=16x16 href=/favicon-16x16.png><link rel=manifest href=/site.webmanifest><title>app-minitask</title><link href=/js/GetUser.15131ffa.js rel=prefetch><link href=/js/Switch.bcc0bc47.js rel=prefetch><link href=/js/User.aec4c07e.js rel=prefetch><link href=/css/app.6f7f4c2a.css rel=preload as=style><link href=/js/app.f59748a7.js rel=preload as=script><link href=/js/chunk-vendors.6058d26b.js rel=preload as=script><link href=/css/app.6f7f4c2a.css rel=stylesheet></head><body><noscript><strong>We're sorry but app-minitask doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.6058d26b.js></script><script src=/js/app.f59748a7.js></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
+    <title>app-minitask</title>
+
+  <link href="/js/GetUser.js" rel="prefetch"><link href="/js/Switch.js" rel="prefetch"><link href="/js/User.js" rel="prefetch"><link href="/js/app.js" rel="preload" as="script"><link href="/js/chunk-vendors.js" rel="preload" as="script"></head>
+  <body>
+    <noscript>
+      <strong>We're sorry but app-minitask doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  <script type="text/javascript" src="/js/chunk-vendors.js"></script><script type="text/javascript" src="/js/app.js"></script></body>
+</html>
