--- a/server/mail/action.html
+++ b/server/mail/action.html
@@ -2,7 +2,7 @@
 <head>
 <meta name="viewport" content="width=device-width" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Actionable emails e.g. reset password</title>
+<title> #{title} </title>
 <link href="styles.css" media="all" rel="stylesheet" type="text/css" />
 </head>
 
@@ -13,30 +13,21 @@
 		<td></td>
 		<td class="container" width="600">
 			<div class="content">
-				<table class="main" width="100%" cellpadding="0" cellspacing="0" itemprop="action" itemscope itemtype="http://schema.org/ConfirmAction">
+				<table class="main" width="100%" cellpadding="0" cellspacing="0">
 					<tr>
 						<td class="content-wrap">
 							<meta itemprop="name" content="Confirm Email"/>
 							<table width="100%" cellpadding="0" cellspacing="0">
 								<tr>
-									<td class="content-block">
-										Please confirm your email address by clicking the link below.
-									</td>
+									<td class="content-block"> #{actionText} </td>
 								</tr>
 								<tr>
 									<td class="content-block">
-										We may need to send you critical information about our service and it is important that we have an accurate email address.
+										<a href="#{actionURL}" class="btn-primary"> #{actionURLText} </a>
 									</td>
 								</tr>
 								<tr>
-									<td class="content-block" itemprop="handler" itemscope itemtype="http://schema.org/HttpActionHandler">
-										<a href="http://www.mailgun.com" class="btn-primary" itemprop="url">Confirm email address</a>
-									</td>
-								</tr>
-								<tr>
-									<td class="content-block">
-										&mdash; The Mailgunners
-									</td>
+									<td class="content-block aligncenter"> www.kubedev.co.uk </td>
 								</tr>
 							</table>
 						</td>
@@ -45,7 +36,7 @@
 				<div class="footer">
 					<table width="100%">
 						<tr>
-							<td class="aligncenter content-block">Follow <a href="http://twitter.com/mail_gun">@Mail_Gun</a> on Twitter.</td>
+							<td class="aligncenter content-block"> Follow <a href="http://twitter.com/KubeDev"> @KubeDev </a> on Twitter. </td>
 						</tr>
 					</table>
 				</div></div>
