Fixed navbar interaction and disabled create unless a project or plan is open/registered

--- a/server2/public/index.html
+++ b/server2/public/index.html
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="/favicon.ico">
-    <title>front</title>
-  <link href="/assets/js/about.js" rel="prefetch"><link href="/assets/js/create.js" rel="prefetch"><link href="/assets/js/items.js" rel="prefetch"><link href="/assets/js/login.js" rel="prefetch"><link href="/assets/js/logout.js" rel="prefetch"><link href="/assets/js/recover.js" rel="prefetch"><link href="/assets/js/user.js" rel="prefetch"><link href="/assets/js/verify.js" rel="prefetch"><link href="/assets/js/app.js" rel="preload" as="script"><link href="/assets/js/chunk-vendors.js" rel="preload" as="script"></head>
-  <body>
-    <noscript>
-      <strong>We're sorry but front doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  <script type="text/javascript" src="/assets/js/chunk-vendors.js"></script><script type="text/javascript" src="/assets/js/app.js"></script></body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>front</title><link href=/assets/js/about.6585459c.js rel=prefetch><link href=/assets/js/create.3aeb7e3a.js rel=prefetch><link href=/assets/js/items.b255ca74.js rel=prefetch><link href=/assets/js/login.5fdafd63.js rel=prefetch><link href=/assets/js/logout.6f1f411b.js rel=prefetch><link href=/assets/js/recover.6f1fc0d2.js rel=prefetch><link href=/assets/js/user.c6d67674.js rel=prefetch><link href=/assets/js/verify.18722aa7.js rel=prefetch><link href=/assets/css/app.df6ec36a.css rel=preload as=style><link href=/assets/css/chunk-vendors.3ef6ec65.css rel=preload as=style><link href=/assets/js/app.dc8f7e49.js rel=preload as=script><link href=/assets/js/chunk-vendors.bc82c542.js rel=preload as=script><link href=/assets/css/chunk-vendors.3ef6ec65.css rel=stylesheet><link href=/assets/css/app.df6ec36a.css rel=stylesheet></head><body><noscript><strong>We're sorry but front doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/assets/js/chunk-vendors.bc82c542.js></script><script src=/assets/js/app.dc8f7e49.js></script></body></html>
